# rosbag_processor

./: .gitignore  batch_process.sh  batch_process_2017.sh  batch_process_no_split.sh  batch_process_no_split_2017.sh  batch_process_no_split_remove_omron_lidar.sh  batch_process_remove_omron_lidar.sh
src/: CMakeLists.txt  package.xml
src/launch/: omron_image_compressor.launch  omron_image_compressor_2017.launch  omron_image_compressor_no_split.launch  omron_image_compressor_no_split_2017.launch  omron_image_compressor_no_split_remove_omron_lidar.launch  omron_image_compressor_remove_omron_lidar.launch
src/script/: image_resizer.py
